objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Order__c</fullName>
        <label>Date of Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GST_INN__c</fullName>
        <label>GST INN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Our_Product__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>IF(Product__r.Cost_of_Products__c  *  Quantity__c * 1.18&gt;500, Product__r.Cost_of_Products__c  *  Quantity__c * 1.18, Product__r.Cost_of_Products__c  *  Quantity__c * 1.18+90 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Delivered_Status_Cannot_be_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(  Status__c  ),
    OR(
       ISPICKVAL(PRIORVALUE( Status__c ),&quot;Delivered&quot;),
       ISPICKVAL(PRIORVALUE( Status__c ),&quot;Delivered&quot;)
     )
)</errorConditionFormula>
        <errorMessage>You Can&apos;t Change the Order status now</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_past_date</fullName>
        <active>true</active>
        <errorConditionFormula>Date_of_Order__c   &lt; TODAY()</errorConditionFormula>
        <errorMessage>Phone Field Can&apos;t be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Field</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX(Phone_Number__c, &quot;[7-9]{1}[0-9]{9}&quot;))</errorConditionFormula>
        <errorMessage>Must Contain 10 Digits Only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Price_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Total_Price__c&gt;2000, ISNULL(GST_INN__c))</errorConditionFormula>
        <errorMessage>More than 2000</errorMessage>
    </validationRules>
</CustomObject>